--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Build
         run: |
-          cd /uf2-build/ports/rp2
+          cd /uf2-build/micropython/ports/rp2
           make submodules
           make clean
           make
@@ -26,4 +26,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: UF2
-          path: /uf2-build/ports/rp2/build-PICO/firmware.uf2
+          path: /uf2-build/micropython/ports/rp2/build-PICO/firmware.uf2
