--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Build
-        working-directory: /uf2-build/micropython/ports/rp2
+        working-directory: ./ports/rp2
         run: |
           make submodules
           make clean
@@ -26,4 +26,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: UF2
-          path:  /uf2-build/micropython/ports/rp2/build-PICO/firmware.uf2
+          path:  ./ports/rp2/build-PICO/firmware.uf2
