Fixed volume paths

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,12 +12,14 @@ jobs:
     container:
       image: ghcr.io/pavelaron/uf2-build:1.0
       volumes:
-        - ${{ github.workspace }}:/uf2-build/micropython
+        - ${{ github.workspace }}:/app
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Build
-        working-directory: ports/rp2
+      - name: Copy source
+        run: cp -a /app/. /uf2-build/micropython/ports/rp2/modules/
+      - name: Make
+        working-directory: /uf2-build/micropython/ports/rp2
         run: |
           make submodules
           make clean
@@ -26,4 +28,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: UF2
-          path:  ports/rp2/build-PICO/firmware.uf2
+          path: /uf2-build/micropython/ports/rp2/build-PICO/firmware.uf2
