--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,13 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/pavelaron/uf2-build:1.0
-      volumes:
-        - ${{ github.workspace }}:/app
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Copy source
-        run: cp -a /app/. /uf2-build/micropython/ports/rp2/modules/
+        run: cp -a . /uf2-build/micropython/ports/rp2/modules/
       - name: Make
         working-directory: /uf2-build/micropython/ports/rp2
         run: |
