--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,12 +8,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/pavelaron/uf2-build:1.0
+      image: ghcr.io/pavelaron/uf2-build:1.1
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Copy source
-        run: cp -a . /uf2-build/micropython/ports/rp2/modules/
+      - name: Minify
+        run: |
+          pnpm install
+          pnpm start
+      - name: Copy dist
+        run: cp -a dist/. /uf2-build/micropython/ports/rp2/modules/
       - name: Make
         working-directory: /uf2-build/micropython/ports/rp2
         run: |
